--- a/README.Rmd
+++ b/README.Rmd
@@ -4,21 +4,14 @@ output: github_document
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
-```{r, include = FALSE}
-knitr::opts_chunk$set(
-  collapse = TRUE,
-  comment = "#>",
-  fig.path = "man/figures/README-",
-  out.width = "100%"
-)
+```{r, echo=FALSE, out.width="433px", fig.align="center"}
+knitr::include_graphics("man/figures/mt-logo-workmark.png")
 ```
+
 
 # MTP.Graphics
 
-<!-- badges: start -->
-<!-- badges: end -->
-
-The goal of MTP.Graphics is to ...
+A package containing helper functions for the devlopment of graphics for the MTP
 
 ## Installation
 
@@ -38,18 +31,3 @@ library(MTP.Graphics)
 ## basic example code
 ```
 
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
-
-```{r cars}
-summary(cars)
-```
-
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this.
-
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
